Rework dark tabs CSS to fix the blurry tab.
The root cause of the blurriness was the skew on the text. This only 
skews the angled sides. 

Fixes atom/tabs#62

--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -6,13 +6,13 @@
 @tab-bottom-border-height: 5px;
 @tab-border: 1px solid @tab-border-color;
 @tab-bar-bottom-border-color: #111;
+@tab-max-width: 160px;
 
 .tab-bar {
   height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
   background: @tab-bar-background-color;
   box-shadow: inset 0 -8px 8px -4px rgba(0,0,0, .15);
   padding: 0 10px 0 10px;
-  box-sizing: border-box;
 
   &:after {
     content: "";
@@ -29,45 +29,58 @@
   .tab {
     position: relative;
     top: @tab-top-padding;
+    max-width: @tab-max-width;
     height: @tab-height;
     line-height: @tab-height;
+    padding: 0;
+    margin: 0 20px 0 5px;
     color: @text-color;
-    padding-left: 0;
-    margin-left: 15px;
-    border-top-right-radius: @tab-radius;
-    box-shadow: inset -1px -1px 1px rgba(0,0,0, .05);
-    -webkit-transform: skewX(@tab-skew);
+
     transition: color .1s ease-in;
-    box-shadow: inset -1px 1px 0 @tab-border-color, 4px 0px 4px rgba(0,0,0,.1);
     border: none;
 
-    &, &:before {
+    &, &:before, &:after {
       background-image: -webkit-linear-gradient(top, lighten(#333, 7%), #333);
+      height: @tab-height;
     }
 
-    &:before {
+    &:before, &:after {
       content: '';
       position: absolute;
-      top: 0;
-      left: -16px;
+      top: 0px;
+      width: 25px;
       height: @tab-height;
-      width: 30px;
+    }
+
+    // left angled edge
+    &:before {
+      left: -14px;
       border-top-left-radius: @tab-radius;
-      -webkit-transform: skewX(133deg);
       box-shadow: inset 1px 1px 0 @tab-border-color, -4px 0px 4px rgba(0,0,0,.1);
-      border: none;
+      -webkit-transform: skewX(-@tab-skew);
+    }
+
+    // right angled edge
+    &:after {
+      right: -14px;
+      border-top-right-radius: @tab-radius;
+      box-shadow: inset -1px 1px 0 @tab-border-color, 4px 0px 4px rgba(0,0,0,.1);
+      -webkit-transform: skewX(@tab-skew);
     }
 
     .close-icon {
+      right: 0;
       z-index: 3;
+      text-align: right;
       line-height: @tab-height;
-      -webkit-transform: skewX(-@tab-skew);
       color: @text-color;
+
 
       &:hover {
         color: inherit;
       }
     }
+
     &.modified:not(:hover) .close-icon {
       top: @tab-height/2 - @modified-icon-width/2 + 1px;
       right: 14px;
@@ -80,7 +93,9 @@
     }
 
     .title{
-      -webkit-transform: skewX(-@tab-skew);
+      position: relative;
+      z-index: 1;
+      padding-right: 10px
     }
 
     &:first-child {
@@ -90,13 +105,10 @@
 
   .tab.active {
     z-index: 1;
-    line-height: @tab-height - 2px;
     color: @text-color-highlight;
     box-shadow: inset -1px 1px 0 @tab-border-color, 4px -4px 4px rgba(0,0,0,.1);
-    border: none;
 
     .title{
-      position: relative;
       top: 1px;
     }
 
@@ -105,14 +117,17 @@
       color: @text-color;
     }
 
-    &, &:before {
+    &, &:before, &:after {
       background-image: -webkit-linear-gradient(top, lighten(@tab-background-color-active, 7%), @tab-background-color-active);
       height: @tab-height + 1px;
     }
 
     &:before {
-      border: none;
       box-shadow: inset 1px 1px 0 @tab-border-color, -4px -4px 4px rgba(0,0,0,.1);
+    }
+
+    &:after {
+      box-shadow: inset -1px 1px 0 @tab-border-color, 4px -4px 4px rgba(0,0,0,.1);
     }
   }
 
